--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -28,6 +28,8 @@ GOX="${GOBIN}/gox-v1.0.1"
 
 HUGO="${GOBIN}/hugo-v0.80.0"
 
+MDL="${GOBIN}/mdl-v1.7.6"
+
 MUTAGEN="${GOBIN}/mutagen-v0.11.8"
 
 PROTOC_GEN_DOC="${GOBIN}/protoc-gen-doc-v1.4.1"
